# icon4py

./: .buildinfo  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .mypy.ini  .opencode  .pre-commit-config.yaml  AGENTS.md  AMD_INTRODUCTION.md  AUTHORS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  GOAL.md  HEADER.txt  INTRODUCTION.md  LICENSE  LOG.md  README.md  REVIEW.md  SPEC.md  __main__.profile  a.out  all-requirements-dev.txt  all-requirements.txt  asv.conf.json  base-requirements-dev.txt  base-requirements.txt  benchmark_JW.sh  benchmark_JW_granule.sh  benchmark_JW_nsys.sh  benchmark_JW_wall.sh  benchmark_JW_wall_2.sh  benchmark_JW_wall_amd.sh  benchmark_dycore.sh  (+80 more)
atm_phy_schemes/: README.md  requirements-dev.txt  requirements.txt  setup.cfg
atm_phy_schemes/src/icon4py/atm_phy_schemes/: gscp_data.py  gscp_graupel.py  gscp_graupel_Ong.py  gscp_graupel_Ong_allinOne.py  gscp_graupel_Ong_allinOne_split.py  gscp_graupel_Ong_noTernaryInSection7.py  gscp_graupel_Ong_section10.py  mo_convect_tables.py  mo_satad.py
atm_phy_schemes/tests/: get_data.sh  test_graupel.py  test_graupel_Ong.py  test_graupel_Ong_profileTest.py  test_graupel_Ong_split.py  test_graupel_Ong_split_trivialdata.py  test_graupel_stub.py  test_graupel_toy_field_operator.py  test_graupel_toy_scan.py  test_mo_satad.py  test_scan.py  testutils_serialbox.py
atm_phy_schemes/tests/ser_data/: ArchiveMetaData-ref_rank_0.json  ArchiveMetaData-ref_rank_1.json  ArchiveMetaData-ref_rank_2.json  ArchiveMetaData-ref_rank_3.json  ArchiveMetaData-ref_rank_4.json  ArchiveMetaData-ref_rank_5.json  ArchiveMetaData-ref_rank_6.json  MetaData-ref_rank_0.json  MetaData-ref_rank_1.json  MetaData-ref_rank_2.json  MetaData-ref_rank_3.json  MetaData-ref_rank_4.json  MetaData-ref_rank_5.json  MetaData-ref_rank_6.json
bindings/: pyproject.toml
bindings/src/icon4py/bindings/: __init__.py  all_bindings.py  common.py  config.py  debug_utils.py  diffusion_wrapper.py  dycore_wrapper.py  grid_wrapper.py  icon4py_export.py  muphys_wrapper.py  simple.py  viztracer_plugin.py
bindings/tests/: conftest.py
bindings/tests/bindings/: .gitignore  test_codegen_references.py  test_diffusion_v2.py  test_diffusion_wrapper.py  test_dycore_v2.py  test_dycore_wrapper.py  test_grid_init.py  test_icon4py_export.py
bindings/tests/bindings/references/: icon4py_bindings.f90  icon4py_bindings.h  icon4py_bindings.py
model/atmosphere/advection/: .pre-commit-config.yaml  README.md  pyproject.toml
model/atmosphere/advection/advection_tests/: conftest.py  test_btraj_dreg_stencil_01.py  test_btraj_dreg_stencil_02.py  test_btraj_dreg_stencil_03.py  test_divide_flux_area_list_stencil_01.py  test_divide_flux_area_list_stencil_02.py  test_face_val_ppm_stencil_01.py  test_face_val_ppm_stencil_02.py  test_face_val_ppm_stencil_02a.py  test_face_val_ppm_stencil_02b.py  test_face_val_ppm_stencil_02c.py  test_face_val_ppm_stencil_05.py  test_hflux_ffsl_hybrid_stencil_01a.py  test_hflux_ffsl_hybrid_stencil_02.py  test_hflx_limiter_mo_stencil_01a.py  test_hflx_limiter_mo_stencil_01b.py  test_hflx_limiter_mo_stencil_02.py  test_hflx_limiter_mo_stencil_03.py  test_hflx_limiter_mo_stencil_04.py  test_hflx_limiter_pd_stencil_01.py  test_hflx_limiter_pd_stencil_02.py  test_hor_adv_stencil_01.py  test_mo_advection_traj_btraj_compute_o1_dsl.py  test_prep_gauss_quadrature_c_list_stencil.py  test_prep_gauss_quadrature_c_stencil.py  test_rbf_intp_edge_stencil_01.py  test_recon_lsq_cell_c_svd_stencil.py  test_recon_lsq_cell_l_svd_stencil.py  test_set_zero_c.py  test_set_zero_c_k.py  (+14 more)
model/atmosphere/diffusion/: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  pytest_benchmark_results_3.10.json  requirements-dev.txt  requirements.txt
model/common/: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
model/common/tests/: __init__.py  conftest.py  field_aliases.py  field_type_aliases.py  test_compute_first_vertical_derivative.py  test_dimension.py  test_grid_manager.py  test_icon_grid.py  test_interpolation_fields.py  test_mo_intp_rbf_rbf_vec_interpol_vertex.py  test_utils.py  test_vertical.py  utils.py
model/standalone_driver/: README.md  pyproject.toml
model/testing/: README.md  pyproject.toml
model/testing/tests/: conftest.py  test_helpers.py  test_verification_benchmarking.py
testutils/: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
tools/: .bumpversion.cfg  .flake8  .license_header.txt  .pre-commit-config.yaml  ICON-Liskov_integration_style-guide.md  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
tools/docs/: ICON_Liskov_integration_style_guide.md
tools/src/icon4pytools/: __init__.py
tools/tests/: __init__.py  conftest.py
tools/tests/f2ser/: conftest.py  test_f2ser_cli.py  test_f2ser_codegen.py  test_granule_deserialiser.py  test_parsing.py
tools/tests/icon4pygen/: conftest.py  helpers.py  test_backend.py  test_codegen.py  test_exceptions.py  test_field_rendering.py  test_icochainsize.py  test_metadata.py
tools/tests/liskov/: conftest.py  fortran_samples.py  test_cli.py  test_code_metadata.py  test_deserialiser.py  test_directives_deserialiser.py  test_external.py  test_generation.py  test_parser.py  test_scanner.py  test_serialisation_deserialiser.py  test_transform.py  test_utils.py  test_validation.py  test_writer.py
tools/tests/py2f/: test_cffi_utils.py  test_code_generation.py  test_parsing_wrapper.py  test_py2fgen.py
tools/tests/py2fgen/: .gitignore  call.py  conftest.py  dycore_wrapper.py  solve_nh_wrapper.py  test_cffi.py  test_cffi_utils.py  test_cli.py  test_code_generation.py  test_codegen.py  test_codegen_references.py  test_conversion.py  test_diffusion_wrapper.py  test_diffusion_wrapper_py.py  test_dycore_wrapper.py  test_export.py  test_generator.py  test_grid_init.py  test_parsing.py  test_parsing_wrapper.py  test_py2fgen.py  test_solve_nh_wrapper.py  test_test_utils.py  utils.py
tools/tests/tools/: conftest.py
(+4721 files in other folders)
